--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 !/log/.keep
 !/tmp/.keep
 
+
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/
@@ -31,3 +32,5 @@
 /config/master.key
 
 /node_modules
+log/development.log
+*.log
